tests/ui/autoref-autoderef/deref-ambiguity-becomes-nonambiguous.stderr
error[E0277]: the size for values of type `dyn Fn(_, _) -> _` cannot be known at compilation time
  --> $DIR/deref-ambiguity-becomes-nonambiguous.rs:38:13
   |
LL |     let _ = var_fn.clone();
   |             ^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `dyn Fn(_, _) -> _`, which is required by `Value<Rc<_>>: Deref`
note: required for `Value<Rc<dyn Fn(_, _) -> _>>` to implement `Deref`
  --> $DIR/deref-ambiguity-becomes-nonambiguous.rs:22:9
   |
LL | impl<F> Deref for Value<Rc<F>> {
   |      -  ^^^^^     ^^^^^^^^^^^^
   |      |
   |      unsatisfied trait bound introduced here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
